--- a/LogistikWebApi/appsettings.json
+++ b/LogistikWebApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": " Server=localhost\\SQLEXPRESS01;Database=LogistikWebApi;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
